# termai

./: .gitignore  .golangci.yml  CLAUDE.md  Cargo.toml  FIX_DOUBLE_CLICK.md  README.md  Untitled  build.sh  dev.sh  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
ai/: go.mod  go.sum  main.go
ai/cmd/: prompt_test.go  root.go  root_test.go  serve.go  session.go  update.go  update_test.go  version.go
ai/internal/analyzer/: analyzer.go  analyzer_test.go
ai/internal/config/: config.go
ai/internal/executor/: executor_test.go
ai/internal/llm/: llm.go
cmd/: input.go  prompt.go  prompt_test.go  root.go  root_test.go  session.go
crates/termai-app/: Cargo.toml
crates/termai-app/src/: ai.rs  colors.rs  config.rs  font.rs  git_info.rs  history.rs  macos_menu.rs  main.rs  pane.rs  proc_info.rs  tab.rs
crates/termai-app/src/theme/: tokens.rs
crates/termai-app/src/ui/: ai_overlay.rs  connection_indicator.rs  mod.rs  path_shorten.rs  search_bar.rs  tab_bar.rs
crates/termai-core/: Cargo.toml
crates/termai-core/src/: lib.rs
crates/termai-pty/: Cargo.toml
crates/termai-pty/src/: lib.rs
crates/termai-renderer/: Cargo.toml
crates/termai-renderer/src/: atlas.rs  lib.rs  shader.wgsl  shaper.rs
docs/: RELEASING.md
internal/analyzer/: analyzer.go  analyzer_test.go
internal/executor/: executor.go  executor_test.go
packaging/homebrew/: termai.rb
packaging/macos/: AppIcon.icns  Info.plist  package.sh
scripts/: build-linux.sh  package-appimage.sh  package-deb.sh  package-tar.sh
themes/: tokyo-night.toml
(+3 files in other folders)
