[package]
name = "termai-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "termai"
path = "src/main.rs"

[dependencies]
termai-core = { path = "../termai-core" }
termai-renderer = { path = "../termai-renderer" }
termai-pty = { path = "../termai-pty" }
wgpu = "24"
winit = "0.30"
pollster = "0.4"
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"

# Window icon decoding for non-macOS platforms (macOS uses the .icns bundle icon).
[target.'cfg(not(target_os = "macos"))'.dependencies]
png = "0.17"
